@@ -1,3 +1,13 @@
+2020-05-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-adb.el (tramp-adb-send-command-and-check): Add optional
+	argument EXIT-STATUS.
+	(tramp-adb-handle-process-file): Use it.
+
+	* tramp-sh.el (tramp-send-command-and-check): Add optional
+	argument EXIT-STATUS.
+	(tramp-sh-handle-process-file): Use it.  (Bug#41099)
+
 2020-04-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.4.3.4 released.
